--- a/app/cart/styles.module.scss
+++ b/app/cart/styles.module.scss
@@ -102,6 +102,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  text-align: center;
   .link {
     padding: 0.5rem;
     background-color: #000;
