--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -19,4 +19,21 @@
     font-weight: 700;
     color: #000;
   }
+  div {
+    position: relative;
+  }
+  div span {
+    position: absolute;
+    top: 15px;
+    right: -10px;
+    display: block;
+    background-color: #f00;
+    border-radius: 50%;
+    color: #fff;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
