--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -22,9 +22,9 @@
   div {
     position: relative;
   }
-  div span {
+  span {
     position: absolute;
-    top: 15px;
+    top: -7px;
     right: -10px;
     display: block;
     background-color: #f00;
@@ -32,6 +32,7 @@
     color: #fff;
     width: 20px;
     height: 20px;
+    font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
