--- a/components/converter/styles.module.scss
+++ b/components/converter/styles.module.scss
@@ -14,7 +14,7 @@
   }
   button {
     background-color: #404b6d;
-    padding: 0.5rem 0;
+    padding: 8px 0;
     color: #fff;
     border: 0;
     width: 150px;
