--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -31,6 +31,7 @@
     border-radius: 50%;
     color: #fff;
     width: 20px;
+    font-size: 13px;
     height: 20px;
     font-weight: 700;
     display: flex;
